--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="mains">
     <h1 id = "title">Partner Survey Form</h1>
     <p id = "description">Please leave your feedback so the service continues to improve</p>
     <form method = "post" id = "survey-form">
@@ -48,5 +49,6 @@
       </fieldset>
       <input id = "submit" type="submit" value="Submit">
     </form>
+  </div>
   </body>
 </html>
